# pyweb

./: .deepsource.toml  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-Jupyter  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  docker-compose.test.yml  docker-compose.yml  jupyter.sh  package.json  pyproject.toml  readme.md  requirements.txt  setup.py  start.py  start.sh  taskfile.yml  test.sh  testjs.sh
.github/: renovate.json
.github/workflows/: basic.yml  pre-commit.yml  pypi.yml  release.yml  test.yml
config/: server_settings.cfg  settings.cfg
jupyter/: Dockerfile
pyweb/: __init__.py  app.py  application.py  help.py  start.py
pyweb/blueprints/admin/: api.py
pyweb/blueprints/cache/: api.py
pyweb/blueprints/owner/: api.py  data.py  (+1 more)
pyweb/config/: settings.cfg
pyweb/core/: cache.py  decorators.py  format.py  parser.py  whoosh.py
pyweb/dash/: common.py
pyweb/exts/: exts.py
pyweb/pydash/: common.py
pyweb/static/: common.js  graph.js  performance.js  project.js  table.js
pyweb/templates/: base.html  menu.html
pyweb/testing/: response.py
pyweb/web/: application.py  extension.py  highcharts.py  parser.py  requests.py
sandbox/: help.py  wurst.py  wurst2.py
source/: index.rst
static/css/: custom.css
static/js/: common.js  table.js
test/: conftest.py  requirements.txt  server_settings.cfg  settings.py  test_app.py  wurst.py
test/config/: settings.cfg
test/resources/: settings.cfg  whoosh.csv
test/templates/: base.html
test/test_apis/: test_post.py  test_racer.py  test_whoosh.py
test/test_core/: test_cache.py  test_decorator.py  test_format.py  test_parser.py  test_whoosh.py
test/test_dash/: test_callbacks.py  test_dash.py  test_dash_util.py  test_logger.py
test/test_static/: test_static.py
test/test_testing/: server.py  test_flask.py
test/test_web/: test_application.py  test_extension.py  test_highcharts.py  test_parser.py  test_requests.py
tests/resources/: price.csv  settings.cfg
tests/test_apis/: test_post.py
tests/test_dash/: test_callbacks.py  test_dash.py  test_logger.py
tests/test_testing/: server.py  test_flask.py
tests/test_web/: test_application.py  test_extension.py  test_highcharts.py  test_parser.py  test_requests.py
work/: book_a.ipynb
(+37 files in other folders)
