[project]
name = "pyweb"
version = "0.0.0"
description = "..."
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
readme = "readme.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.9.3",
    "flask>=3.1.0",
    "flask-bootstrap>=3.3.7.1",
    "flask-caching>=2.3.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
    "setuptools>=75.8.0",
    "waitress>=3.0.2",
    "whitenoise>=6.8.2",
]

[project.urls]
repository = "https://github.com/tschm/pyweb"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pre-commit>=4.0.1",
    "requests_mock>=1.12.1"
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "*__init__.py"
]

[tool.ruff.lint]
select = ["E", "F", "I"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["pyweb"]

# remove this
[tool.deptry.per_rule_ignores]
DEP002 = ["waitress", "setuptools"]
